[tool.poetry]
name = "qrwifi"
version = "0.0.1"
description = "Wifi QR code generator"
authors = ["Hamo <yehonatanbh1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
qrcode = {extras = ["pil"], version = "^8.0"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
